--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,8 +73,10 @@
         </li>
   
         <li nz-menu-item>
-          <i nz-icon nzType="setting" nzTheme="outline"></i>
-          <span>Mon compte</span> 
+          <a [routerLink]="'/my_account'">
+            <i nz-icon nzType="setting" nzTheme="outline"></i>
+            <span>Mon compte</span> 
+          </a>
         </li>
   
         <li nz-menu-item>
