--- a/src/app/components/articles/show-article/content/content.component.html
+++ b/src/app/components/articles/show-article/content/content.component.html
@@ -33,7 +33,9 @@
 
             <tr>
                 <th>Résolution</th>
-                <td>{{ article?.resolution }}</td>
+                <td>
+                  <p [innerHTML] ="article?.resolution"></p>
+                </td>
             </tr>
 
             <tr>
