--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -20,7 +20,7 @@
                 </nz-form-item>
             </div>
             <div class="btn">
-                <a [routerLink]="'/add_article'"><i nz-icon nzType="plus" nzTheme="outline"></i>Créer un article</a>
+                <a [routerLink]="'/add_article/'+project?.id"><i nz-icon nzType="plus" nzTheme="outline"></i>Créer un article</a>
                  <a [routerLink]="'/add_category/'+project?.id"><i nz-icon nzType="plus" nzTheme="outline"></i>Créer une catégorie</a>
             </div>
         </div>
