--- a/src/app/components/articles/show-article/content/content.component.css
+++ b/src/app/components/articles/show-article/content/content.component.css
@@ -10,6 +10,7 @@ table thead th {
     font-size: 16px;
     background-color: #f3f3f3;
     text-align: center;
+    width: 5%;
 }
 
 table th, table td {
