--- a/src/app/components/configuration/informations/informations.component.html
+++ b/src/app/components/configuration/informations/informations.component.html
@@ -5,7 +5,7 @@
             <div nz-row>
                 <div nz-col [nzSpan]="18">
                   <nz-form-item>
-                      <nz-form-label>Nom du projet</nz-form-label>
+                      <nz-form-label [nzSpan]="4">Nom du projet</nz-form-label>
                       <nz-form-control>
                         <input nz-input formControlName="name"/>
                       </nz-form-control>
@@ -16,7 +16,7 @@
             <div nz-row>
                 <div nz-col [nzSpan]="18">
                   <nz-form-item>
-                      <nz-form-label>Description</nz-form-label>
+                      <nz-form-label [nzSpan]="4">Description</nz-form-label>
                       <nz-form-control>
                         <textarea rows="4" nz-input formControlName="description"></textarea>
                       </nz-form-control>
@@ -27,7 +27,7 @@
             <div nz-row>
                 <div nz-col [nzSpan]="18">
                   <nz-form-item>
-                      <nz-form-label>Site web</nz-form-label>
+                      <nz-form-label [nzSpan]="4">Site web</nz-form-label>
                       <nz-form-control>
                         <input nz-input formControlName="website"/>
                       </nz-form-control>
@@ -38,7 +38,7 @@
             <div nz-row>
                 <div nz-col [nzSpan]="18">
                     <nz-form-item>
-                        <nz-form-label>Public</nz-form-label>
+                        <nz-form-label [nzSpan]="4">Public</nz-form-label>
                         <nz-form-control>
                           <input type="checkbox" nz-input formControlName="isPublic"/>
                         </nz-form-control>
@@ -49,7 +49,7 @@
             <div nz-row>
                 <div nz-col [nzSpan]="18">
                     <nz-form-item>
-                        <nz-form-label>Sous projet de</nz-form-label>
+                        <nz-form-label [nzSpan]="4">Sous projet de</nz-form-label>
                         <nz-form-control>
                             <nz-select formControlName="parent_id">
                                 <nz-option *ngFor="let project of projects" [nzValue]="project.id" [nzLabel]="project.name"></nz-option>
@@ -62,7 +62,7 @@
             <div nz-row>
                 <div nz-col [nzSpan]="18">
                     <nz-form-item>
-                        <nz-form-label>Landing page</nz-form-label>
+                        <nz-form-label [nzSpan]="4">Landing page</nz-form-label>
                         <nz-form-control>
                           <input nz-input formControlName="landing_page"/>
                         </nz-form-control>
@@ -70,8 +70,10 @@
                   </div>
             </div>
 
-            <div class="submit-btn">
-                <button type="submit">Editer</button>
+            <div nz-row [nzGutter]="24">
+                <div nz-col [nzSpan]="18" class="search-area">
+                    <button nz-button nzType="primary">Editer</button>
+                </div>
             </div>
            
         </form>
