--- a/src/app/components/articles/show-article/show-article.component.css
+++ b/src/app/components/articles/show-article/show-article.component.css
@@ -1,6 +1,6 @@
 h1 {
     font-weight: bold;
-    font-size: 26px;
+    font-size: 24px;
 }
 h3 {
     font-weight: bold;
@@ -33,6 +33,8 @@ h3 {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 18px;
+    width: 380px;
+    margin-left: 20px;
 }
 
 .title-actions .actions a {
