Before adding recaptcha

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
           <nz-form-control nzErrorTip="Veuillez saisir votre email !">
 
             <nz-input-group nzPrefixIcon="user">
-              <input type="text" nz-input placeholder="email" formControlName="email" />
+              <input type="text" nz-input placeholder="E-mail" formControlName="email" />
 
             </nz-input-group>
 
