--- a/src/app/components/articles/show-article/history/history.component.html
+++ b/src/app/components/articles/show-article/history/history.component.html
@@ -13,7 +13,7 @@
         <tbody>
             <tr>
                 <td>
-                    {{ article?.updated_at | date:'dd/MM/yyyy HH:MM:SS' }}
+                    {{ article?.updated_at | date:'medium' }}
                 </td>
                 <td>
                     {{ article?.author }}
