--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -43,13 +43,13 @@
                 
                             <nz-list-item-meta-description class="description">
                                 <p>
-                                    {{ article.description | slice:0:80 }}... |
+                                    {{ article.description | slice:0:80 }}... 
                                 </p>
                                 <p>
                                     {{ article.summary |slice:0:80}}...
                                 </p>
                                 <p>
-                                    Mis à jour le : {{ article.updated_at| date:'dd/MM/yyyy HH:MM:SS' }}
+                                    Mis à jour le : {{ article.updated_at| date:'short' }}
                                 </p>
                             </nz-list-item-meta-description>
                     </nz-list-item-meta>
